--- a/clipdown/2024/web/clipdonwplus/resource/css/style_plus_info.css
+++ b/clipdown/2024/web/clipdonwplus/resource/css/style_plus_info.css
@@ -371,3 +371,39 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     .input_form .form_control::placeholder{font-size: 11px; font-size: 1.1rem;}
     .input_form .time{top: 16px; right: 15px; font-size: 1.1rem; font-size: 11px; font-weight: 500;}
 }
+
+
+
+
+/* 02240307 MainVisualStyle */
+.section_main .main-intro .img_top_main{position: relative; top: 0; left: 0; width: 100%; max-width: 900px; padding: 40px 0; margin: 0 auto;}
+.section_main .img_top_main .item_base{position: relative; width: 100%; max-width: 900px; margin: 0 auto;}
+.section_main .img_top_main .item_download{position: absolute; }
+.section_main .img_top_main .item_download.item_download_view{top: 18%; left: 20%; transform: scale(.85);}
+.section_main .img_top_main .item_download.item_download_view .img_item_view{position: relative}
+.section_main .img_top_main .item_download.item_download_multi{top: 22%; right: 20%;}
+.section_main .img_top_main .item_download.item_download_multi .img_item_multi{position: relative;}
+.section_main .img_top_main .item_download.item_download_part{bottom: 20%; left: 20%; transform: scale(1);}
+.section_main .img_top_main .item_download.item_download_part .img_item_download_part{position: relative;}
+.section_main .img_top_main .img_item_view{width: 125px; height: 125px; }
+.section_main .img_top_main .img_item_multi{width: 206px; height: 243px;}
+.section_main .img_top_main .img_item_part{width: 525px; height: 46px;}
+
+
+@media screen and (max-width: 767px){
+    .section_main .img_top_main .item_download.item_download_view{left: 17%; transform: scale(.65);}
+    .section_main .img_top_main .item_download.item_download_multi{top: 16%; right: 15%; transform: scale(.75);}
+    .section_main .img_top_main .item_download.item_download_part{bottom: 20%; left: 11%; transform: scale(.85);}
+    /* .section_main .img_top_main .img_item_view{width: 125px; height: 125px; }
+    .section_main .img_top_main .img_item_multi{width: 206px; height: 243px;}
+    .section_main .img_top_main .img_item_part{width: 525px; height: 16px;} */
+}
+
+@media screen and (max-width: 480px){
+    
+}
+
+@media screen and (max-width: 360px){
+    
+}
+7
