--- a/clipdown/2024/webview/cashmate/resource/css/style_cashmate.css
+++ b/clipdown/2024/webview/cashmate/resource/css/style_cashmate.css
@@ -662,6 +662,18 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .section_invite .invite_list .list_item:last-child{border-bottom: 0;}
 .section_invite .invite_list .list_item span{font-size: 14px; font-size: 1.4rem; line-height: 1.4; vertical-align: middle;}
 .section_invite .invite_list .list_item .data{position: relative; top: 2px; font-weight: 700;}
+/* 20240409 프로세스변경 */
+.section_invite .input_group.code_register, .section_invite .input_group{display: table; position: relative; width: 100%; border-collapse: separate;}
+.section_invite .input_group.code_register .form_input{width: 73%; min-width: 100px; height: 36px; border: 1px solid #666; border-radius: 5px;}
+.section_invite .input_group.code_register .form_input::placeholder{font-size:13px; font-size:1.3rem; color:#666;}
+.section_invite .input_group.code_register .btn_input{width: 20%; height: 35px; font-size: 12px; font-size: 1.2rem; margin-left: 5px; border-radius: 5px;}
+.section_invite .btn_group{padding: 20px 0;}
+.section_invite .btn_group .btn{width: 40%; margin: 0 5px;}
+.section_invite .help-text{display: block; padding: 5px; font-size: 11px; font-size: 1.1rem;}
+.section_invite .content_state_login .empty_text{font-size:16px; font-size:1.5rem; line-height: 1.5; letter-spacing: -1px; padding-bottom: 60px;}
+.section_invite .content_state_complete .code_register .form_input.readonly{width: 100%; font-size:16px; font-size:1.6rem; font-weight: 600; text-align: center; cursor: default;}
+
+
 
 /* tooltip style bubble */
 .tooltip_layer{position: absolute; top:0; background: #fff; text-align: center; border: 1px solid #666; padding: 8px 10px; box-sizing: border-box; box-shadow: 0 0 5px rgba(0, 0, 0, 0.15); z-index: 9999;}
@@ -677,18 +689,17 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     * 캐시메이트 이벤트 기본 레이아웃 스타일
     * 출석체크 캘린더 스타일
 */
+.section_event_attend{padding: 0;}
+.section_event_attend .contents{padding: 0 20px;}
 .section_event_attend .contents .content_title{padding: 20px 0;}
 .section_event_attend .contents .content_title h1{font-size: 2.2rem; font-weight: 600;}
 .section_event_attend .contents .content_title h1 .font_en{position: relative; top: 2px; font-size: 2.4rem;}
-.section_event_attend .contents_attend_state{position: relative; padding: 20px 0;}
+.section_event_attend .contents_attend_state{position: relative; padding: 20px 20px;}
 .contents_attend_state .state_box{display: flex; justify-content: space-between; align-items: center;}
 .contents_attend_state .state_box .state_item{ position: relative; width: 50%; text-align: center; padding: 20px 0;}
 .contents_attend_state .state_box.row_01 .state_item{display: block;}
 .contents_attend_state .state_box.row_01 .state_puzzle{background: #f7f7f7; height: 92px;}
 .contents_attend_state .state_box.row_02 .state_item{display: flex; justify-content: space-around;}
-
-
-
 
 .calendar_month{}
 .calendar_head{display: flex; justify-content: center; align-items: center; max-width: 767px; margin:0 auto;}
@@ -699,14 +710,16 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .calendar_body .week .day_item span{display: flex; align-items: center; justify-content: center;}
 .calendar_body .week .day_item .day{position: relative; width: 8.5vw; height: 8.5vw; text-align: center; background: #f7f7f7; border-radius: 50%; font-size: 1.6rem; font-weight: 600;}
 .calendar_body .week .day_item .day.check .active_check{position: absolute; top:0; left: 0; width: 100%; height: 100%; z-index: 1;}
-
-
 @media (min-width: 992px) {
     .calendar_body .week .day_item .day{width: 5vw; height: 5vw;}
 }
 
-
-
+/* Puzzle Style */
+.attend_puzzle{position: relative; max-width: 480px; min-width: 280px; margin: 0 auto; border: 8px solid #333;}
+.attend_puzzle{background-image: url('../images/event/attend_puzzle/img_puzzle_bg.png'); background-size: contain; background-repeat: no-repeat;}
+.puzzle_piece_state{display: inline-block; position: relative; width: 100%; max-width: 480px; vertical-align: middle;}
+.puzzle_piece_state .piece_item{position: relative; float: left; width: 33.333%; min-width: 80px; opacity: 0;}
+.puzzle_piece_state .piece_item.on{opacity: 1;}
 
 
 
