--- a/clipdown/2024/webview/cashmate/resource/css/style_cashmate.css
+++ b/clipdown/2024/webview/cashmate/resource/css/style_cashmate.css
@@ -700,7 +700,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .section_attend .contents{padding: 0 20px;}
 .section_attend .contents .content_title{padding: 20px 0;}
 .section_attend .contents .content_title h1{font-size: 1.6rem; font-weight: 600; line-height: 1.6;}
-.section_attend .contents .content_title h1 .font_en{position: relative; top: 1px; font-weight: 700;}
+.section_attend .contents .content_title h1 .font_en{position: relative;}
 .section_attend .content_attend_state{position: relative; padding: 0;}
 .section_attend .content_attend_state .inner{position: relative; width: 100%; max-width: 480px; margin: 0 auto;}
 .content_attend_state .state_bg{background: #fff; border-radius: 5px; padding: 10px 10px;}
@@ -745,22 +745,25 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .day_check .hex_inner2{display: flex; justify-content: center; align-items: center; width: inherit; height: inherit; background-size: cover !important; position: absolute;  top:50%; left: 50%; transform: translate(-50%, -50%) rotate(-120deg); overflow: hidden; background: transparent;}
 .day_check.check_on .hex_inner2{background: #207FD1;}
 .day_check.check_on .hex_inner2 .day{color: #fff;}
-.day_check.check_on.check_badge .badge_gold{width: 8.1vw;}
-.check_today{position: absolute; top: -14px; left: -8%; min-width: 56px; border-radius: 50px; background: #ffd700; text-align: center; padding: 3px 6px; box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.25);}
+.day_check.check_on.check_badge .badge_gold{width: 8.1vw;}.check_today{position: absolute; top: -14px; left: -5%; min-width: 65px; border-radius: 50px; background: #ffd700; text-align: center; padding: 4px 8px; box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.25);}
 .check_today::after{content: ''; width: 0; height: 0; position: absolute; bottom: -9px; right: 43%; border-left: 5px solid transparent; border-right: 5px solid transparent;  border-top: 5px solid #ffd700; border-bottom: 5px solid transparent;}
 .check_today span{position: relative; top: 0; font-size: 1.1rem; font-weight: 600; }
 
 /* Attend info List */
 .section_attend .contents.attend_info .content_title, .section_attend .contents.attend_mission .content_title{padding: 20px 0 0 0;}
+.section_attend .contents.attend_info .content_title h1, .section_attend .contents.attend_mission .content_title h1{font-size: 18px; font-size: 1.8rem; }
+.section_attend .contents.attend_info .content_title .summary, .section_attend .contents.attend_mission .content_title .summary{font-size: 16px; font-size: 1.6rem; }
 .section_attend .content_item{padding: 10px 0;}
 .section_attend .list_item{display: flex; justify-content: space-between; align-items: center; padding: 16px 0;}
+
+
 .attend_info{position: relative; background: #207FD1;}
 .attend_info .content_title h1, .attend_info .content_title .summary{color: #fff;}
-.attend_info .list_item{border-bottom: 2px dotted #fff;}
+.attend_info .list_item{border-bottom: 2px dotted #a5cbec;}
 .attend_info .list_item:last-child{border-bottom: 0; padding-bottom: 20px;}
 .attend_info .list_item div{color: #fff;}
-.attend_info .list_item .num_box{width: 0; font-size: 14px; font-size: 1.4rem; font-weight: 700;}
-.attend_info .list_item .text_box{width: 65%; line-height: 1.6;}
+.attend_info .list_item .num_box{width: 0; font-size: 16px; font-size: 1.6rem; font-weight: 700;}
+.attend_info .list_item .text_box{width: 65%; font-size: 16px; font-size: 1.6rem; line-height: 1.6;}
 .attend_info .list_item .img_box{width: 20%; text-align: right;}
 .attend_info .list_item .img_box img{width: 20%; min-width: 44px;}
 .attend_mission .content_title h1{color: #207FD1;}
@@ -800,8 +803,8 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .contents_attend_visual .content_top .content_message{position: relative;}
 .contents_attend_visual .content_top .content_message h2{display: inline-block; font-size: 20px; font-size: 2rem; font-weight: 700; color: #fff; padding: 10px 20px; letter-spacing: -.1rem;}
 .item_bubble{position: absolute; top: 50%; left: 50%; transform: translate(-50%, -180%); border-radius: 50px; background: #fff; text-align: center; padding: 3px 10px; box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.25);}
-.item_bubble::after{content: ''; width: 0; height: 0; position: absolute; bottom: -9px; right: 43%; border-left: 7px solid transparent; border-right: 7px solid transparent;  border-top: 7px solid #fff; border-bottom: 7px solid transparent;}
-.item_bubble .item_text{position: relative; top: 1px; font-size: 1.4rem; font-weight: 600; letter-spacing: -.01rem;}
+.item_bubble::after{content: ''; width: 0; height: 0; position: absolute; bottom: -12px; right: 48%; border-left: 7px solid transparent; border-right: 7px solid transparent;  border-top: 7px solid #fff; border-bottom: 7px solid transparent;}
+.item_bubble .item_text{position: relative; top: 0; font-size: 1.4rem; font-weight: 600; letter-spacing: -.01rem;}
 .item_bubble .item_img{position: relative; float: right; width: 16%; right: 7px;}
 
 
