--- a/clipdown/2024/webview/cashmate/resource/css/style_cashmate.css
+++ b/clipdown/2024/webview/cashmate/resource/css/style_cashmate.css
@@ -696,7 +696,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     * 출석체크 캘린더 스타일
 */
 .section_attend{padding: 0;}
-.section_attend .font_en{position: relative; top: 1px; font-weight: 600;}
+.section_attend .font_en{position: relative; top: 1px; font-weight: 700;}
 .section_attend .contents{padding: 0 20px;}
 .section_attend .contents .content_title{padding: 20px 0;}
 .section_attend .contents .content_title h1{font-size: 1.6rem; font-weight: 600; line-height: 1.6;}
@@ -708,7 +708,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .content_attend_state .state_box.row_01 .state_item{display: block;}
 .content_attend_state .state_box.row_01 .state_attend_point h3{font-size: 1.4rem; font-weight: 700;}
 .content_attend_state .state_box.row_01 .state_attend_point .state_point{font-size: 2.4rem; font-weight: 700; text-align: center; padding: 10px 0;}
-.content_attend_state .state_box.row_01 .state_attend_point .text_link{font-size: 1.1rem; color:#666;}
+.content_attend_state .state_box.row_01 .state_attend_point .text_link{font-size: 1.2rem; color:#666;}
 .content_attend_state .state_box.row_01 .state_attend_point .text_link:after{
     content: '';
     position: absolute;
@@ -756,19 +756,20 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .section_attend .list_item{display: flex; justify-content: space-between; align-items: center; padding: 16px 0;}
 
 
-.attend_info{position: relative; background: #207FD1;}
-.attend_info .content_title h1, .attend_info .content_title .summary{color: #fff;}
+.attend_info{position: relative; background: #f1f8fe;}
 .attend_info .list_item{border-bottom: 2px dotted #a5cbec;}
 .attend_info .list_item:last-child{border-bottom: 0; padding-bottom: 20px;}
-.attend_info .list_item div{color: #fff;}
+
 .attend_info .list_item .num_box{width: 0; font-size: 16px; font-size: 1.6rem; font-weight: 700;}
 .attend_info .list_item .text_box{width: 65%; font-size: 14px; font-size: 1.4rem; line-height: 1.4;}
 .attend_info .list_item .img_box{width: 20%; text-align: right;}
 .attend_info .list_item .img_box img{width: 20%; min-width: 44px;}
-.attend_mission .content_title h1{color: #207FD1;}
+.attend_mission{background: #207FD1;}
+.attend_mission .content_title h1, .attend_mission .content_title .summary{color: #fff;}
+.attend_mission .list_item div{color: #fff;}
 .attend_mission .text_box{width: 50%; font-size: 14px; font-size: 1.4rem; line-height: 1.4;}
 .attend_mission .btn{font-size: 14px; font-size: 1.4rem; line-height: 1.8; padding: 5px 20px;}
-.attend_mission .btn_Part{background: #207FD1; color: #fff;}
+.attend_mission .btn_Part{background: #fff; color: #207FD1;}
 .attend_mission .btn_Part_complete{background: #eee; color: #aaa; cursor: default;}
 
 /* Puzzle Style */
@@ -804,7 +805,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .contents_attend_visual .content_top .content_message h2{display: inline-block; font-size: 20px; font-size: 2rem; font-weight: 700; color: #fff; padding: 10px 20px; letter-spacing: -.1rem;}
 .item_bubble{position: absolute; top: 50%; left: 50%; transform: translate(-50%, -180%); border-radius: 50px; background: #fff; text-align: center; padding: 3px 10px; box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.25);}
 .item_bubble::after{content: ''; width: 0; height: 0; position: absolute; bottom: -12px; right: 48%; border-left: 7px solid transparent; border-right: 7px solid transparent;  border-top: 7px solid #fff; border-bottom: 7px solid transparent;}
-.item_bubble .item_text{position: relative; top: 0; font-size: 1.4rem; font-weight: 600; letter-spacing: -.01rem;}
+.item_bubble .item_text{position: relative; top: 1px; font-size: 1.4rem; font-weight: 600; letter-spacing: -.01rem;}
 .item_bubble .item_img{position: relative; float: right; width: 16%; right: 7px;}
 
 
