--- a/clipdown/2024/webview/cashmate/resource/css/style_cashmate.css
+++ b/clipdown/2024/webview/cashmate/resource/css/style_cashmate.css
@@ -696,7 +696,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     * 출석체크 캘린더 스타일
 */
 .section_attend{padding: 0;}
-.section_attend .font_en{position: relative; top: 1px; font-weight: 700;}
+.section_attend .font_en{position: relative; top: 0; font-weight: 700;}
 .section_attend .contents{padding: 0 20px;}
 .section_attend .contents .content_title{padding: 20px 0;}
 .section_attend .contents .content_title h1{font-size: 1.6rem; font-weight: 600; line-height: 1.6;}
